# gpt-commander

./: .gitignore  Cargo.toml  README.md
autoit/: hook-gpt-commander.au3
autoit/fine-tuning/: .gitignore  fine_tuning.jsonl  fine_tuning_validate.jsonl  index.js  package.json  sysprompt.txt
autoit/fine-tuning/data/: fromHtml.js  fromMd.js  sub2Data.js
src/: main.rs
