[package]
name = "gpt-commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api-rs = "4.0.7"
anyhow = "1.0"
clipboard-rs = "0.1"
chrono = "0.4.34"

[dependencies.eframe]
version = "0.26.2"
features = ["default"]

[dependencies.windows]
version = "0.52"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
]
